--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "@strapi/plugin-users-permissions": "5.12.7",
     "@strapi/strapi": "5.12.7",
     "better-sqlite3": "11.3.0",
+    "pg": "^8.15.6",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.0.0",
+    "strapi-connector-mongoose": "^3.1.4",
     "styled-components": "^6.0.0"
   },
   "devDependencies": {
